--- a/SpinnerExample/app/src/main/res/values/strings.xml
+++ b/SpinnerExample/app/src/main/res/values/strings.xml
@@ -4,7 +4,7 @@
     <string-array name="great_bands_array">
       <item>Lynyrd Skynyrd</item>
       <item>Allman Brothers</item>
-      <item>Jame's gang</item>
+      <item>James gang</item>
     </string-array>
 
 </resources>
