--- a/volleyex/app/src/main/res/values/strings.xml
+++ b/volleyex/app/src/main/res/values/strings.xml
@@ -1,7 +1,7 @@
 <resources>
   <string name="app_name">VolleyExample</string>
-  <string name="volley_activity_button_text">VolleyActivity</string>
-  <string name="semi_separate_activity_button_text">SemiSeparateActivity</string>
-  <string name="separate_activity_activity_button_text">SeparateActivity</string>
+  <string name="volley_activity_button_text">Volley</string>
+  <string name="semi_separate_activity_button_text">SemiSeparate</string>
+  <string name="separate_activity_activity_button_text">Separate</string>
   <string name="update_button_text">Update</string>
 </resources>
